--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "clegginabox/pdf-merger",
     "description": "PDF File Merger for PHP5",
     "require": {
-        "setasign/fpdi": "*"
+        "setasign/fpdi": "*",
+        "setasign/fpdf": "*",
     },
     "authors": [
         {
